# sgxfuzz

./: .gitignore  CMakeLists.txt  Initrd.sh  build.sh  calculate-coverage.sh  clean.sh  display-struct.sh  initialize-target.sh  run-intel-sgx-ssl.sh  run-sgx-wallet.sh  run.sh
Data/result-SGX_SQLite/: layout.json  result.csv  result.txt
Data/result-TaLoS-2023-02-05/: layout.json  result.csv  result.txt
Data/result-intel-sgx-ssl-2023-01-15/: layout.json  result.csv  result.txt
Data/result-mbedtls-SGX-2023-02-10/: layout.json  result.csv  result.txt
Data/result-sgx-wallet-2022-12-29/: layout.json  result.csv  result.txt
Data/result-sgx-wallet-2023-01-15/: layout.json  result.csv  result.txt
Data/result-wolfssl-2023-01-15/: layout.json  result.csv  result.txt
enclave-dumper/: extract.sh
kAFLUSpaceUtil/: CMakeLists.txt
kAFLUSpaceUtil/include/: nyx.h
kafl/kAFL-Fuzzer/common/: config.py  qemu.py
kafl/kAFL-Fuzzer/fuzzer/process/: slave.py
native-sgx-runner/: CMakeLists.txt  NativeEnclave.cpp  NativeEnclave.h  main-generic.cpp
native-sgx-runner/buffer/: GuardedBuffer.cpp
packer/packer/: nyx.ini  nyx_packer.py
packer/packer/common/: self_check.py
packer/packer/linux_x86_64-userspace/: compile_64.sh
sharedir/: agent.sh
